[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
nanoid = "0.4.0"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
surrealdb = "2.3.8"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
